tests/single_instruction_translation_validation/mcsema/register-variants-samereg/sqrtsd_xmm_xmm/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:204:26: error: use of undefined value '@sqrt'
  %23 = tail call double @sqrt(double %6) #21
                         ^
0.03user 0.02system 0:00.05elapsed 107%CPU (0avgtext+0avgdata 27516maxresident)k
0inputs+16outputs (0major+3257minor)pagefaults 0swaps
